--- a/mystyle.css
+++ b/mystyle.css
@@ -10,6 +10,38 @@ body {
     height: 100%;
 }
 
+.cardimg {
+    height: 15em;
+    background-size: cover;
+    background-image: url(./images/image-equilibrium.jpg);
+    border-radius: 5px;
+}
+
+.imgViewIconcover, .imgViewIconcover > .img {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.imgViewIconcover:hover, .imgViewIconcover:active{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: hsl(178, 100%, 50%, .5);
+    cursor: pointer;
+}
+
+.imgViewIconcover:hover > .img , .imgViewIconcover:active > .img {
+    background-image: url("./images/icon-view.svg");
+    width: 2em;
+    height: 1.5em;
+    background-position: center;
+    background-size: cover;
+    object-fit: contain;
+}
+
 .card {
     background-color: hsl(216, 50%, 16%);
     display: flex;
@@ -23,10 +55,15 @@ body {
     box-shadow: 0px 15px 0px 10px hsl(217deg 54% 10%), 0px 10px 0px 30px hsl(215deg 57% 10% / 40%);
 }
 
-h5{
+.nft_title{
     margin-top: 8px;
     margin-bottom: 8px;
     color:white;
+}
+
+.nft_title:hover, .nft_title:active {
+    cursor: pointer;
+    color: hsl(178, 100%, 50%, .5);
 }
 
 p {
@@ -84,4 +121,5 @@ hr {
     bottom: 4%;
     text-align: center;
     margin: auto;
+    background-color: silver;
 }
